Fix z-index of label of outlined inputs

--- a/resources/frontend/src/components/Fileds/Themed/mixins/outlinedFiledsMixin.scss
+++ b/resources/frontend/src/components/Fileds/Themed/mixins/outlinedFiledsMixin.scss
@@ -11,7 +11,7 @@ div.container {
             top: 50%;
             left: 15px;
             transform: translateY(-50%);
-            z-index: 1;
+            z-index: 2;
 
             color: $color__inactive_subtitle;
             font-family: $font__subtitle;
